# libcurl-example

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  install_dependencies.bat  install_dependencies.sh
inc/fasta/: fasta.hpp
inc/util/: curl_easy.hpp  file_utils.hpp  stream_utils.hpp  string_constants.hpp  string_utils.hpp
src/fasta/: fasta.cpp
src/util/: curl_easy.cpp
test/: test_curl.cpp  test_fasta.cpp
test/data/: AB325691.fa
